<resources>
    <string name="app_name">RumahCemara</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_mylist">My List</string>
    <string name="title_options">Options</string>
    <string name="title_service">Service</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_menu_highlight_text">icon menu highlights</string>
    <string name="highlight_title">Highlights</string>
    <string name="example_news_title">Kebijakan Ganja Kanada Gerus Triliunan Rupiah keuntungan Tahunan Bandar Narkoba</string>
    <string name="example_author">Media dan Data RC</string>
    <string name="example_date_created">June 9 2018</string>
    <string name="example_imagenews_description">news image description</string>
    <string name="mark_description">mark news description</string>
    <string name="share_description">share description</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_description">Please fill this form to create an account!</string>
    <string name="revocer_description">Please fill this form to recover your password!</string>
    <string name="select_photo_description">select photo description</string>
    <string name="birth_date">Birth Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="type_of_treatment">Type of treatment</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="have_an_account">Have an account?</string>
    <string name="select_display_picture">Select Display Picture</string>

    <!--TODO : Scructural-->
    <string name="structural">Ajukan pertemuan dengan\nService Provider atau Outreach\nWorker yang dipilih atau\nmengajukan perlindungan hukum\ndan melaporkan pelanggaran</string>
    <string name="purpose">Purpose Legal Counseling\nAppoinment</string>
    <string name="legal_aid">Legal Aid</string>
    <string name="violation">Violation Report</string>
    <string name="dsc_material">Brief Description of Material</string>
    <string name="biomedical_description_text">Pengecekan kesehatan dengan mengajukan pertemuan dengan Service Provider atau Outreach Worker.</string>
    <string name="purpose_biomedical_appointment">Purpose Biomedical Appointment</string>
    <string name="behavioral">Behavioral</string>
    <string name="behavioral_description_text">Konsultan dengan Service Provider atau Outreach Worker yang dipilih mengenai cara pencegahan ataupun penyembuhan penyakit</string>
    <string name="purpose_behavioral_appointment">Purpose Counseling Appointment</string>
    <string name="stuctural_description_text">Ajukan pertemuan dengan Service Provider atau Outreach Worker yang dipilih atau mengajukan perlindungan hukum dan melaporkan pelanggaran</string>
    <string name="purpose_legal_counseling_appointment">Purpose Legal Counseling Appointment</string>
    <string name="violation_report">Violation Report</string>
    <string name="service_purpose_appointment">serveice_purpose_appointment</string>
    <string name="find_service_provider">Find Service Provider</string>
    <string name="find_outreach_worker">Find Outreach Worker</string>
    <string name="hint_search_locarion">Search Service Provider Name or Location</string>
    <string name="nearest_service_provider">Nearest Service Provider</string>
    <string name="media_data_rc"><![CDATA[Media & Data RC]]></string>
    <string name="title_saved_ganja">Kebijakan Ganja Kanada Gerus  Triliunan Rupiah Keuntungan  Tahunan Bandar Narkoba</string>
    <string name="title_news_aparat">Keterlibatan Aparat dalam Bisnis  Narkoba Tidak Mengejutkan</string>
    <string name="edit">Edit</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="notification">Notification</string>
    <string name="faq">faq</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="change_image">Change Image</string>
    <string name="nama">Nama</string>
    <string name="username">Username</string>
    <string name="simpan">Save</string>
    <string name="confirm_logout">Apakah anda yakin akan keluar?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="ask_the_expert">Ask The Expert</string>
    <string name="desk_ask_the_expert">Buat topic untuk dijadikan pertanyaan yang akan dijawab oleh Expert</string>
    <string name="create_on">Create on</string>
    <string name="create_new_topic">Create New Topic</string>
    <string name="create_topic">Create Topic</string>
    <string name="example_address">Jl. Matrapersada No. 16, Kel. Pasirkaliki, Kec. Cimahi Utara Cimahi, West Java, 40514, ID</string>
    <string name="counseling_appointment">Counseling Appointment</string>
    <string name="legal_counseling_appointment">Legal Counseling Appointment</string>
    <string name="identity_card">Identity Card Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="events">Events</string>
    <string name="title_detail">Title Detail</string>
    <string name="by">by</string>
    <string name="on">on</string>
    <string name="see_more">See More</string>
    <string name="home_news">home_news</string>
    <string name="biomedical_appointment">Biomedical Appointment</string>
    <string name="location">Location</string>
    <string name="training_and_education"><![CDATA[Training & Education]]></string>
    <string name="campaign_and_nformation"><![CDATA[Campaign & Information]]></string>
    <string name="capacity_building">Capacity Building</string>
    <string name="news">News</string>
    <string name="articles">Articles</string>
    <string name="reminder_description">reminder event description</string>
    <string name="event_title">Seminar Pencegahan Aids</string>


</resources>
