<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:theme="@style/DialogTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_logout"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:layout_marginBottom="@dimen/margin_padding_size_medium"
        android:fontFamily="@font/sf_pro_display"
        android:textColor="@color/edit"
        android:textSize="@dimen/text_size_large"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/shadow_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yes_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ya"
            android:textAllCaps="false"
            android:fontFamily="@font/sf_pro_display"
            android:textColor="@color/Black"
            android:background="@color/White"
            android:textSize="@dimen/text_size_medium"/>

        <Button
            android:id="@+id/no_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tidak"
            android:textAllCaps="false"
            android:fontFamily="@font/sf_pro_display"
            android:textColor="@color/Red"
            android:background="@color/White"
            android:textSize="@dimen/text_size_medium"/>

    </LinearLayout>
</LinearLayout>