<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_news"
    card_view:cardElevation="0dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="237.5dp"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding_size_small"
        android:theme="@style/quicksandTheme">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="0dp"
            android:layout_weight="6">
            <ImageView
                android:id="@+id/img_news"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_news"
                android:scaleType="centerCrop"
                android:contentDescription="@string/example_imagenews_description" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:padding="@dimen/margin_padding_size_small"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_size_small"
                android:text="@string/example_news_title"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/boldFont">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkGray"
                    android:textSize="@dimen/text_size_nano"
                    android:layout_marginEnd="@dimen/margin_padding_size_small"
                    android:text="by"/>

                <TextView
                    android:id="@+id/txt_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_nano"
                    android:textColor="@color/OrangeText"
                    android:text="@string/example_author"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkGray"
                    android:textSize="@dimen/text_size_nano"
                    android:layout_marginStart="@dimen/margin_padding_size_small"
                    android:layout_marginEnd="@dimen/margin_padding_size_small"
                    android:text="on"/>
                <TextView
                    android:id="@+id/txt_date_created"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_nano"
                    android:textColor="@color/OrangeText"
                    android:text="@string/example_date_created"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:id="@+id/mark_news"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_padding_size_micro"
                android:contentDescription="@string/mark_description"
                android:src="@drawable/icon_mark" />

            <ImageView
                android:id="@+id/share_news"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_padding_size_micro"
                android:contentDescription="@string/share_description"
                android:src="@drawable/icon_share" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/shadow_line"/>

</android.support.v7.widget.CardView>