<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".options.fragment.activity.EditAccountActivity">

    <include layout="@layout/home_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_padding_size_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_padding_size_medium">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/select_dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/edit"
                android:text="@string/change_image"
                android:layout_marginBottom="@dimen/margin_padding_size_large"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/Black"
                android:text="@string/nama"/>

            <EditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reza Yuda"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/Black"
                android:text="Phone Number"/>

            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="+6285793134658"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/Black"
                android:text="@string/username"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Rezayuda"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/Black"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="*******"
                android:drawableRight="@drawable/ic_remove_red_eye"/>

        </LinearLayout>
    </ScrollView>

        <LinearLayout
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:background="@color/White">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/shadow_line"
                android:layout_below="@id/bio"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/simpan"
                android:textColor="@color/edit"
                android:textSize="@dimen/text_size_large"
                android:layout_margin="@dimen/margin_padding_size_medium"
                />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>